--- a/src/style.css
+++ b/src/style.css
@@ -25,7 +25,7 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  /* place-items: center; */
   min-width: 320px;
   min-height: 100vh;
 }
@@ -54,15 +54,17 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-.card {
+/* .card {
   padding: 2em;
-}
+} */
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
+  width: 100%;
+  /* max-width: 1280px; */
+  /* margin: 0 auto; */
   padding: 2rem;
-  text-align: center;
+  /* text-align: center; */
+  background-color: #f0f0f0;
 }
 
 @media (prefers-color-scheme: light) {
